<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:clipChildren="false">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/card_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clipChildren="false"
        android:drawableTop="@drawable/ic_details_black_24px"
        android:elevation="10dp"
        android:text="@string/string_overview"
        android:textSize="12sp"
        android:theme="@style/buttonOrange" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/card_overviewHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clipChildren="false"
        android:drawableTop="@drawable/ic_details_black_24px"
        android:elevation="10dp"
        android:text="@string/string_overview"
        android:textSize="12sp"
        android:visibility="invisible" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/card_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/card_overviewHolder"
        android:layout_toRightOf="@+id/card_overviewHolder"
        android:clipChildren="false"
        android:drawableTop="@drawable/ic_shopping_basket_black_24px"
        android:elevation="10dp"
        android:text="@string/string_ingredients"
        android:textSize="11sp"
        android:theme="@style/buttonBlue" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/card_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/card_commentsHolder"
        android:layout_toStartOf="@+id/card_commentsHolder"
        android:clipChildren="false"
        android:drawableTop="@drawable/ic_directions_black_24px"
        android:elevation="10dp"
        android:text="@string/text_Direction"
        android:textSize="11sp"
        android:theme="@style/buttonGray" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/card_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clipChildren="false"
        android:drawableTop="@drawable/ic_chat_bubble_outline_black_24dp"
        android:elevation="10dp"
        android:text="@string/title_comments"
        android:textSize="11sp"
        android:theme="@style/buttonYellow" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/card_commentsHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clipChildren="false"
        android:drawableTop="@drawable/ic_chat_bubble_outline_black_24dp"
        android:elevation="10dp"
        android:text="@string/title_comments"
        android:textSize="11sp"
        android:visibility="invisible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_recipe_images"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card_overviewHolder"
        android:clipChildren="false" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/recycler_view_recipe_images"
        android:clipChildren="false"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/scene_target"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/quarter_margin"
            android:clipChildren="false">
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>