<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/white"
    android:fitsSystemWindows="false"
    android:backgroundTint="@color/app_gray"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        card_view:cardBackgroundColor="@color/grey"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/full_margin"
            android:layout_marginRight="@dimen/full_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/quarter_margin"
                android:layout_marginRight="@dimen/quarter_margin"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/comment_author_image_view"
                    android:layout_width="@dimen/image_small_circle"
                    android:layout_height="@dimen/image_small_circle"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/author_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_person_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/comment_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="@dimen/quarter_margin"
                    android:layout_marginStart="@dimen/quarter_margin"
                    android:text="@string/you_are_commenting_as"
                    android:textAppearance="@style/appMediumFont" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/full_margin"
        android:layout_marginRight="@dimen/full_margin"
        android:layout_marginTop="@dimen/half_margin"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginLeft="@dimen/quarter_margin"
            android:layout_marginRight="@dimen/quarter_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/comment_edit_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:layout_gravity="start"
                    android:autoLink="all"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="bottom"
                    android:hint="@string/text_post_a_comment"
                    android:inputType="text|textMultiLine"
                    android:maxLength="200"
                    android:maxLines="10"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancel_comment_appcompat_button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:drawableLeft="@drawable/ic_clear_black_24dp"
                    android:elevation="12dp"
                    android:text="@string/text_button_cancel"
                    android:visibility="gone"
                    android:textSize="18sp"
                    android:theme="@style/buttonCancel" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/send_comment_appcompat_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableLeft="@drawable/ic_send_white_24dp"
                    android:elevation="12dp"
                    android:text="@string/string_add"
                    android:textSize="18sp"
                    android:theme="@style/buttonGreenWhiteBold" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/full_margin"
        android:layout_marginRight="@dimen/full_margin"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/app_blue"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="@dimen/quarter_margin"
                    android:layout_marginStart="@dimen/quarter_margin"
                    android:layout_weight="1"
                    android:text="@string/title_comments"
                    android:textAppearance="@style/appLargeFontWhite" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipe_comment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:layout_marginBottom="@dimen/half_margin"
                android:layout_marginTop="@dimen/half_margin" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>