<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:plus="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:drawSelectorOnTop="true"
    android:orientation="vertical"
    android:transitionName="@string/transition_layout">

    <android.support.v7.widget.CardView
        android:id="@+id/parent_layout"
        style="@style/CardViewStyle.Light"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="10dp"
        android:focusable="true"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/quarter_margin"
            android:layout_marginLeft="@dimen/full_margin"
            android:layout_marginRight="@dimen/full_margin"
            android:layout_marginTop="@dimen/quarter_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/quarter_margin"
                android:layout_marginRight="@dimen/quarter_margin"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/author_image_view"
                    android:layout_width="@dimen/image_small_circle"
                    android:layout_height="@dimen/image_small_circle"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/author_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_person_black_24dp"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/quarter_margin"
                android:layout_marginLeft="@dimen/quarter_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recipe_author_text_view"
                    style="@style/appMediumFontWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:maxLines="1"
                    android:text="wooanaz" />

                <com.google.android.gms.plus.PlusOneButton
                    android:id="@+id/plus_one_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:transitionName="@string/transition_googlePlus"
                    plus:annotation="inline"
                    plus:size="standard" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>